--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> 804-594-0019, please text, call, or leave a message</h1>
+<p>Nevermind    
+<h1> 804-xxx-xxxx please text, call, or leave a message</h1>
 </body>
 </html>
